--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:15.496703Z",
-     "start_time": "2023-02-18T01:34:14.515706Z"
+     "end_time": "2023-02-18T02:00:05.969703Z",
+     "start_time": "2023-02-18T02:00:04.982203Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:15.505365Z",
-     "start_time": "2023-02-18T01:34:15.498165Z"
+     "end_time": "2023-02-18T02:00:06.002855Z",
+     "start_time": "2023-02-18T02:00:05.972367Z"
     }
    },
    "outputs": [],
@@ -158,6 +158,7 @@
     "    multp=10,\n",
     "    core_num=10,\n",
     "    share_memory={_share_mem_status})\n",
+    "pearson_output = np.absolute(pearson_output)\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
     "\n",
@@ -215,6 +216,7 @@
     "    multp=10,\n",
     "    core_num=10,\n",
     "    share_memory={_share_mem_status})\n",
+    "pearson_output = np.absolute(pearson_output)\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
     "\n",
@@ -282,8 +284,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:22.318828Z",
-     "start_time": "2023-02-18T01:34:15.507224Z"
+     "end_time": "2023-02-18T02:00:12.218864Z",
+     "start_time": "2023-02-18T02:00:06.003748Z"
     }
    },
    "outputs": [],
@@ -313,8 +315,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:23.698920Z",
-     "start_time": "2023-02-18T01:34:22.321959Z"
+     "end_time": "2023-02-18T02:00:13.018621Z",
+     "start_time": "2023-02-18T02:00:12.220902Z"
     }
    },
    "outputs": [
@@ -353,7 +355,7 @@
      "output_type": "stream",
      "text": [
       "Kendall's tau: \n",
-      " KendalltauResult(correlation=0.8122050157867158, pvalue=0.0)\n",
+      " SignificanceResult(statistic=0.8122050157867158, pvalue=0.0)\n",
       "Pearson's correlation: \n",
       " [[1.         0.94631777]\n",
       " [0.94631777 1.        ]]\n"
@@ -387,8 +389,8 @@
    "id": "15cc2a2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:24.775350Z",
-     "start_time": "2023-02-18T01:34:23.700139Z"
+     "end_time": "2023-02-18T02:00:13.681827Z",
+     "start_time": "2023-02-18T02:00:13.019873Z"
     }
    },
    "outputs": [
@@ -427,7 +429,7 @@
      "output_type": "stream",
      "text": [
       "Kendall's tau: \n",
-      " KendalltauResult(correlation=0.8122050157867158, pvalue=0.0)\n",
+      " SignificanceResult(statistic=0.8122050157867158, pvalue=0.0)\n",
       "Pearson's correlation: \n",
       " [[1.         0.94631777]\n",
       " [0.94631777 1.        ]]\n"
@@ -478,8 +480,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:25.274395Z",
-     "start_time": "2023-02-18T01:34:24.776804Z"
+     "end_time": "2023-02-18T02:00:13.960642Z",
+     "start_time": "2023-02-18T02:00:13.684670Z"
     }
    },
    "outputs": [
@@ -506,8 +508,8 @@
    "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:25.697549Z",
-     "start_time": "2023-02-18T01:34:25.275821Z"
+     "end_time": "2023-02-18T02:00:14.184628Z",
+     "start_time": "2023-02-18T02:00:13.961365Z"
     }
    },
    "outputs": [
@@ -546,8 +548,8 @@
    "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:25.871069Z",
-     "start_time": "2023-02-18T01:34:25.698905Z"
+     "end_time": "2023-02-18T02:00:14.272384Z",
+     "start_time": "2023-02-18T02:00:14.185470Z"
     }
    },
    "outputs": [
@@ -576,8 +578,8 @@
    "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:25.934859Z",
-     "start_time": "2023-02-18T01:34:25.872502Z"
+     "end_time": "2023-02-18T02:00:14.338137Z",
+     "start_time": "2023-02-18T02:00:14.273740Z"
     }
    },
    "outputs": [
@@ -586,7 +588,7 @@
      "output_type": "stream",
      "text": [
       "Kendall's tau: \n",
-      " KendalltauResult(correlation=0.2500737738382302, pvalue=0.0)\n"
+      " SignificanceResult(statistic=0.2500737738382302, pvalue=0.0)\n"
      ]
     }
    ],
@@ -610,8 +612,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:25.948282Z",
-     "start_time": "2023-02-18T01:34:25.936220Z"
+     "end_time": "2023-02-18T02:00:14.415290Z",
+     "start_time": "2023-02-18T02:00:14.338947Z"
     }
    },
    "outputs": [],
@@ -838,8 +840,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:32.588434Z",
-     "start_time": "2023-02-18T01:34:25.949715Z"
+     "end_time": "2023-02-18T02:00:20.880433Z",
+     "start_time": "2023-02-18T02:00:14.417177Z"
     }
    },
    "outputs": [],
@@ -865,8 +867,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:33.327608Z",
-     "start_time": "2023-02-18T01:34:32.595612Z"
+     "end_time": "2023-02-18T02:00:21.398778Z",
+     "start_time": "2023-02-18T02:00:20.882237Z"
     }
    },
    "outputs": [
@@ -927,8 +929,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1737091/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_1737091/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
+      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_4064/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_4064/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
       "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_MLPRegressor.npy'"
      ]
@@ -1009,8 +1011,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:40.823107Z",
-     "start_time": "2023-02-18T01:34:40.786552Z"
+     "end_time": "2023-02-18T02:00:35.380015Z",
+     "start_time": "2023-02-18T02:00:35.291577Z"
     }
    },
    "outputs": [],
@@ -1238,8 +1240,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:47.432494Z",
-     "start_time": "2023-02-18T01:34:41.223391Z"
+     "end_time": "2023-02-18T02:00:42.593881Z",
+     "start_time": "2023-02-18T02:00:36.346810Z"
     }
    },
    "outputs": [],
@@ -1261,29 +1263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T01:34:55.942017Z",
-     "start_time": "2023-02-18T01:34:55.883396Z"
+     "end_time": "2023-02-18T02:00:21.401059Z",
+     "start_time": "2023-02-18T02:00:21.401051Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_LogisticRegressionCV_l1.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1737091/25354492.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;34m\"LogisticRegressionCV_ElasticNet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"MLPClassifier\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m ]:\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_1737091/25354492.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_LogisticRegressionCV_l1.npy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_results(_plt, fun_name):\n",
     "    columns = np.load(r\"./ABIDE_columns.npy\")\n",
@@ -1357,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
