--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -1942,7 +1942,8 @@
     "plt.plot(a)\n",
     "plt.show()\n",
     "\n",
-    "b = Pearson_screening_csv_parallel(r\"./fastHDMI/tests/sim/sim_continuous.csv\")\n",
+    "b = np.abs(Pearson_screening_csv_parallel(\n",
+    "    r\"./fastHDMI/tests/sim/sim_continuous.csv\"))\n",
     "plt.plot(b)\n",
     "plt.show()\n",
     "\n",
@@ -2068,7 +2069,8 @@
     "plt.plot(a)\n",
     "plt.show()\n",
     "\n",
-    "b = Pearson_screening_csv_parallel(r\"./fastHDMI/tests/sim/sim_binary.csv\")\n",
+    "b = np.abs(Pearson_screening_csv_parallel(\n",
+    "    r\"./fastHDMI/tests/sim/sim_binary.csv\"))\n",
     "plt.plot(b)\n",
     "plt.show()\n",
     "\n",
@@ -2213,7 +2215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
