--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:05.969703Z",
-     "start_time": "2023-02-18T02:00:04.982203Z"
+     "end_time": "2023-02-18T05:44:24.892649Z",
+     "start_time": "2023-02-18T05:44:23.445804Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:06.002855Z",
-     "start_time": "2023-02-18T02:00:05.972367Z"
+     "end_time": "2023-02-18T05:44:24.901436Z",
+     "start_time": "2023-02-18T05:44:24.893849Z"
     }
    },
    "outputs": [],
@@ -158,7 +158,6 @@
     "    multp=10,\n",
     "    core_num=10,\n",
     "    share_memory={_share_mem_status})\n",
-    "pearson_output = np.absolute(pearson_output)\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_age_Pearson_output\", pearson_output)\n",
     "\n",
@@ -216,7 +215,6 @@
     "    multp=10,\n",
     "    core_num=10,\n",
     "    share_memory={_share_mem_status})\n",
-    "pearson_output = np.absolute(pearson_output)\n",
     "if \"{mem_setting}\" == \"high_mem\":\n",
     "    np.save(r\"./ABIDE_diagnosis_Pearson_output\", pearson_output)\n",
     "\n",
@@ -284,8 +282,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:12.218864Z",
-     "start_time": "2023-02-18T02:00:06.003748Z"
+     "end_time": "2023-02-18T05:44:31.608293Z",
+     "start_time": "2023-02-18T05:44:24.903150Z"
     }
    },
    "outputs": [],
@@ -315,8 +313,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:13.018621Z",
-     "start_time": "2023-02-18T02:00:12.220902Z"
+     "end_time": "2023-02-18T05:44:33.021537Z",
+     "start_time": "2023-02-18T05:44:31.615099Z"
     }
    },
    "outputs": [
@@ -355,7 +353,7 @@
      "output_type": "stream",
      "text": [
       "Kendall's tau: \n",
-      " SignificanceResult(statistic=0.8122050157867158, pvalue=0.0)\n",
+      " KendalltauResult(correlation=0.8122050157867158, pvalue=0.0)\n",
       "Pearson's correlation: \n",
       " [[1.         0.94631777]\n",
       " [0.94631777 1.        ]]\n"
@@ -389,8 +387,8 @@
    "id": "15cc2a2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:13.681827Z",
-     "start_time": "2023-02-18T02:00:13.019873Z"
+     "end_time": "2023-02-18T05:44:34.104278Z",
+     "start_time": "2023-02-18T05:44:33.022947Z"
     }
    },
    "outputs": [
@@ -429,7 +427,7 @@
      "output_type": "stream",
      "text": [
       "Kendall's tau: \n",
-      " SignificanceResult(statistic=0.8122050157867158, pvalue=0.0)\n",
+      " KendalltauResult(correlation=0.8122050157867158, pvalue=0.0)\n",
       "Pearson's correlation: \n",
       " [[1.         0.94631777]\n",
       " [0.94631777 1.        ]]\n"
@@ -480,8 +478,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:13.960642Z",
-     "start_time": "2023-02-18T02:00:13.684670Z"
+     "end_time": "2023-02-18T05:44:34.606729Z",
+     "start_time": "2023-02-18T05:44:34.105713Z"
     }
    },
    "outputs": [
@@ -508,8 +506,8 @@
    "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:14.184628Z",
-     "start_time": "2023-02-18T02:00:13.961365Z"
+     "end_time": "2023-02-18T05:44:35.044169Z",
+     "start_time": "2023-02-18T05:44:34.608315Z"
     }
    },
    "outputs": [
@@ -548,8 +546,8 @@
    "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:14.272384Z",
-     "start_time": "2023-02-18T02:00:14.185470Z"
+     "end_time": "2023-02-18T05:44:35.216260Z",
+     "start_time": "2023-02-18T05:44:35.045679Z"
     }
    },
    "outputs": [
@@ -578,8 +576,8 @@
    "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:14.338137Z",
-     "start_time": "2023-02-18T02:00:14.273740Z"
+     "end_time": "2023-02-18T05:44:35.271433Z",
+     "start_time": "2023-02-18T05:44:35.217285Z"
     }
    },
    "outputs": [
@@ -588,7 +586,7 @@
      "output_type": "stream",
      "text": [
       "Kendall's tau: \n",
-      " SignificanceResult(statistic=0.2500737738382302, pvalue=0.0)\n"
+      " KendalltauResult(correlation=0.2500737738382302, pvalue=0.0)\n"
      ]
     }
    ],
@@ -612,8 +610,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:14.415290Z",
-     "start_time": "2023-02-18T02:00:14.338947Z"
+     "end_time": "2023-02-18T05:44:35.280580Z",
+     "start_time": "2023-02-18T05:44:35.272762Z"
     }
    },
    "outputs": [],
@@ -701,6 +699,7 @@
     "columns = np.load(os.environ[\"SLURM_TMPDIR\"] + r\"/ABIDE_columns.npy\")\n",
     "abide_dep = np.load(os.environ[\"SLURM_TMPDIR\"] +\n",
     "                    r\"/ABIDE_age_{dep_measure}_output.npy\")  # dep_measure\n",
+    "abide_dep = np.absolute(abide_dep)\n",
     "\n",
     "\n",
     "def LogisticRegressionCV_l1(**arg):\n",
@@ -840,8 +839,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:20.880433Z",
-     "start_time": "2023-02-18T02:00:14.417177Z"
+     "end_time": "2023-02-18T05:44:41.427977Z",
+     "start_time": "2023-02-18T05:44:35.281806Z"
     }
    },
    "outputs": [],
@@ -867,8 +866,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:21.398778Z",
-     "start_time": "2023-02-18T02:00:20.882237Z"
+     "end_time": "2023-02-18T05:44:42.117096Z",
+     "start_time": "2023-02-18T05:44:41.432867Z"
     }
    },
    "outputs": [
@@ -929,8 +928,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_4064/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_4064/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
+      "\u001b[0;32m/tmp/ipykernel_9202/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_9202/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
       "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_MLPRegressor.npy'"
      ]
@@ -1011,8 +1010,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:35.380015Z",
-     "start_time": "2023-02-18T02:00:35.291577Z"
+     "end_time": "2023-02-18T05:44:48.341478Z",
+     "start_time": "2023-02-18T05:44:48.305763Z"
     }
    },
    "outputs": [],
@@ -1101,6 +1100,7 @@
     "abide_dep = np.load(\n",
     "    os.environ[\"SLURM_TMPDIR\"] +\n",
     "    r\"/ABIDE_diagnosis_{dep_measure}_output.npy\")  # dep_measure\n",
+    "abide_dep = np.absolute(abide_dep)\n",
     "\n",
     "\n",
     "def LogisticRegressionCV_l1(**arg):\n",
@@ -1240,8 +1240,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:42.593881Z",
-     "start_time": "2023-02-18T02:00:36.346810Z"
+     "end_time": "2023-02-18T05:44:55.876185Z",
+     "start_time": "2023-02-18T05:44:48.856602Z"
     }
    },
    "outputs": [],
@@ -1267,8 +1267,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T02:00:21.401059Z",
-     "start_time": "2023-02-18T02:00:21.401051Z"
+     "end_time": "2023-02-18T05:44:55.908031Z",
+     "start_time": "2023-02-18T05:44:55.908017Z"
     }
    },
    "outputs": [],
@@ -1345,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
