--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:47:50.506185Z",
-     "start_time": "2023-02-18T18:47:50.484732Z"
+     "end_time": "2023-02-18T19:20:46.990983Z",
+     "start_time": "2023-02-18T19:20:46.051083Z"
     }
    },
    "outputs": [],
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:47:51.822800Z",
-     "start_time": "2023-02-18T18:47:51.786920Z"
+     "end_time": "2023-02-18T19:20:49.081075Z",
+     "start_time": "2023-02-18T19:20:49.042798Z"
     }
    },
    "outputs": [],
@@ -284,12 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:04.286328Z",
-     "start_time": "2023-02-18T18:47:52.765048Z"
+     "end_time": "2023-02-18T19:21:01.979979Z",
+     "start_time": "2023-02-18T19:20:49.867893Z"
     }
    },
    "outputs": [],
@@ -315,12 +315,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:06.831187Z",
-     "start_time": "2023-02-18T18:48:05.595123Z"
+     "end_time": "2023-02-18T19:21:04.974319Z",
+     "start_time": "2023-02-18T19:21:03.666953Z"
     }
    },
    "outputs": [
@@ -389,12 +389,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "15cc2a2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:11.136882Z",
-     "start_time": "2023-02-18T18:48:10.011048Z"
+     "end_time": "2023-02-18T19:21:07.711066Z",
+     "start_time": "2023-02-18T19:21:06.450909Z"
     }
    },
    "outputs": [
@@ -480,12 +480,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:13.892940Z",
-     "start_time": "2023-02-18T18:48:13.335841Z"
+     "end_time": "2023-02-18T19:21:12.854317Z",
+     "start_time": "2023-02-18T19:21:12.304079Z"
     }
    },
    "outputs": [
@@ -508,12 +508,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:15.033350Z",
-     "start_time": "2023-02-18T18:48:14.500588Z"
+     "end_time": "2023-02-18T19:21:13.978388Z",
+     "start_time": "2023-02-18T19:21:13.445919Z"
     }
    },
    "outputs": [
@@ -548,12 +548,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:16.735822Z",
-     "start_time": "2023-02-18T18:48:16.438017Z"
+     "end_time": "2023-02-18T19:21:15.978845Z",
+     "start_time": "2023-02-18T19:21:15.788823Z"
     }
    },
    "outputs": [
@@ -578,12 +578,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:17.601793Z",
-     "start_time": "2023-02-18T18:48:17.415128Z"
+     "end_time": "2023-02-18T19:21:16.742363Z",
+     "start_time": "2023-02-18T19:21:16.551846Z"
     }
    },
    "outputs": [
@@ -613,12 +613,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:19.021874Z",
-     "start_time": "2023-02-18T18:48:18.982790Z"
+     "end_time": "2023-02-18T19:21:26.199265Z",
+     "start_time": "2023-02-18T19:21:26.158755Z"
     }
    },
    "outputs": [],
@@ -846,12 +846,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:31.219067Z",
-     "start_time": "2023-02-18T18:48:19.864466Z"
+     "end_time": "2023-02-18T19:21:38.544307Z",
+     "start_time": "2023-02-18T19:21:27.046395Z"
     }
    },
    "outputs": [],
@@ -872,12 +872,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:32.666886Z",
-     "start_time": "2023-02-18T18:48:32.620222Z"
+     "end_time": "2023-02-18T19:21:40.966749Z",
+     "start_time": "2023-02-18T19:21:40.925809Z"
     }
    },
    "outputs": [],
@@ -1008,6 +1008,7 @@
     "    if df.shape[0] > 20:\n",
     "        X, y = df.iloc[:, 1:].to_numpy(copy=False), df.iloc[:, 0].to_numpy(\n",
     "            copy=False)\n",
+    "        X = StandardScaler(copy=False).fit_transform(X)\n",
     "        X = SplineTransformer(n_knots=2,\n",
     "                              degree=3,\n",
     "                              extrapolation=\"continue\",\n",
@@ -1109,12 +1110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:44.844942Z",
-     "start_time": "2023-02-18T18:48:33.560311Z"
+     "end_time": "2023-02-18T19:21:53.163466Z",
+     "start_time": "2023-02-18T19:21:41.924578Z"
     }
    },
    "outputs": [],
@@ -1136,12 +1137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:47.006868Z",
-     "start_time": "2023-02-18T18:48:46.356604Z"
+     "end_time": "2023-02-18T19:21:55.074337Z",
+     "start_time": "2023-02-18T19:21:54.395250Z"
     }
    },
    "outputs": [
@@ -1202,8 +1203,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_37831/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_37831/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
+      "\u001b[0;32m/tmp/ipykernel_58629/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_58629/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
       "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_MLPRegressor.npy'"
      ]
@@ -1291,7 +1292,7 @@
     "        map(int,\n",
     "            np.around(np.linspace(\n",
     "                0, len(columns),\n",
-    "                50 + 1)[1:]).tolist()))  # ADJUST this based on actual settings\n",
+    "                10 + 1)[1:]).tolist()))  # ADJUST this based on actual settings\n",
     "\n",
     "    MI_fit_mean = np.mean(ABIDE_age_MI_foo, 1)\n",
     "    MI_fit_std = np.std(ABIDE_age_MI_foo, 1)\n",
@@ -1347,12 +1348,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:48:50.797295Z",
-     "start_time": "2023-02-18T18:48:50.753493Z"
+     "end_time": "2023-02-18T19:21:59.042030Z",
+     "start_time": "2023-02-18T19:21:58.997655Z"
     }
    },
    "outputs": [],
@@ -1581,12 +1582,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:49:03.891037Z",
-     "start_time": "2023-02-18T18:48:51.703010Z"
+     "end_time": "2023-02-18T19:22:11.027095Z",
+     "start_time": "2023-02-18T19:21:59.775038Z"
     }
    },
    "outputs": [],
@@ -1612,12 +1613,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:49:05.962178Z",
-     "start_time": "2023-02-18T18:49:05.920706Z"
+     "end_time": "2023-02-18T19:22:12.280999Z",
+     "start_time": "2023-02-18T19:22:12.244440Z"
     }
    },
    "outputs": [],
@@ -1749,6 +1750,7 @@
     "    if df.shape[0] > 20:\n",
     "        X, y = df.iloc[:, 1:].to_numpy(copy=False), df.iloc[:, 0].to_numpy(\n",
     "            copy=False)\n",
+    "        X = StandardScaler(copy=False).fit_transform(X)\n",
     "        X = SplineTransformer(n_knots=2,\n",
     "                              degree=3,\n",
     "                              extrapolation=\"continue\",\n",
@@ -1850,12 +1852,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T18:49:18.602566Z",
-     "start_time": "2023-02-18T18:49:07.477757Z"
+     "end_time": "2023-02-18T19:22:24.676627Z",
+     "start_time": "2023-02-18T19:22:12.965801Z"
     }
    },
    "outputs": [],
@@ -1975,7 +1977,7 @@
     "        map(int,\n",
     "            np.around(np.linspace(\n",
     "                0, len(columns),\n",
-    "                50 + 1)[1:]).tolist()))  # ADJUST this based on actual settings\n",
+    "                10 + 1)[1:]).tolist()))  # ADJUST this based on actual settings\n",
     "\n",
     "    MI_fit_mean = np.mean(ABIDE_diagnosis_MI_foo, 1)\n",
     "    MI_fit_std = np.std(ABIDE_diagnosis_MI_foo, 1)\n",
