--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:20:46.990983Z",
-     "start_time": "2023-02-18T19:20:46.051083Z"
+     "end_time": "2023-02-18T19:33:37.230868Z",
+     "start_time": "2023-02-18T19:33:36.272586Z"
     }
    },
    "outputs": [],
@@ -53,8 +53,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:20:49.081075Z",
-     "start_time": "2023-02-18T19:20:49.042798Z"
+     "end_time": "2023-02-18T19:33:38.379685Z",
+     "start_time": "2023-02-18T19:33:38.344884Z"
     }
    },
    "outputs": [],
@@ -288,8 +288,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:01.979979Z",
-     "start_time": "2023-02-18T19:20:49.867893Z"
+     "end_time": "2023-02-18T19:33:50.931596Z",
+     "start_time": "2023-02-18T19:33:39.291340Z"
     }
    },
    "outputs": [],
@@ -319,8 +319,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:04.974319Z",
-     "start_time": "2023-02-18T19:21:03.666953Z"
+     "end_time": "2023-02-18T19:33:53.693753Z",
+     "start_time": "2023-02-18T19:33:52.296757Z"
     }
    },
    "outputs": [
@@ -393,8 +393,8 @@
    "id": "15cc2a2c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:07.711066Z",
-     "start_time": "2023-02-18T19:21:06.450909Z"
+     "end_time": "2023-02-18T19:33:59.574184Z",
+     "start_time": "2023-02-18T19:33:58.356930Z"
     }
    },
    "outputs": [
@@ -484,8 +484,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:12.854317Z",
-     "start_time": "2023-02-18T19:21:12.304079Z"
+     "end_time": "2023-02-18T19:34:02.168776Z",
+     "start_time": "2023-02-18T19:34:01.695825Z"
     }
    },
    "outputs": [
@@ -512,8 +512,8 @@
    "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:13.978388Z",
-     "start_time": "2023-02-18T19:21:13.445919Z"
+     "end_time": "2023-02-18T19:34:03.477003Z",
+     "start_time": "2023-02-18T19:34:02.929220Z"
     }
    },
    "outputs": [
@@ -552,8 +552,8 @@
    "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:15.978845Z",
-     "start_time": "2023-02-18T19:21:15.788823Z"
+     "end_time": "2023-02-18T19:34:04.995966Z",
+     "start_time": "2023-02-18T19:34:04.802868Z"
     }
    },
    "outputs": [
@@ -582,8 +582,8 @@
    "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:16.742363Z",
-     "start_time": "2023-02-18T19:21:16.551846Z"
+     "end_time": "2023-02-18T19:34:05.973971Z",
+     "start_time": "2023-02-18T19:34:05.784129Z"
     }
    },
    "outputs": [
@@ -617,8 +617,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:26.199265Z",
-     "start_time": "2023-02-18T19:21:26.158755Z"
+     "end_time": "2023-02-18T19:34:07.360012Z",
+     "start_time": "2023-02-18T19:34:07.321282Z"
     }
    },
    "outputs": [],
@@ -747,8 +747,8 @@
     "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
     "                                                              inplace=False)\n",
     "    if df.shape[0] > 20:\n",
-    "        X, y = df.iloc[:, 1:].to_numpy(copy=False), df.iloc[:, 0].to_numpy(\n",
-    "            copy=False)\n",
+    "        X, y = df.iloc[:, 1:].to_numpy(copy=True), df.iloc[:, 0].to_numpy(\n",
+    "            copy=True)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
     "        X_train, X_test, y_train, y_test = train_test_split(\n",
     "            X, y, train_size=training_proportion, random_state=seed)\n",
@@ -850,8 +850,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:38.544307Z",
-     "start_time": "2023-02-18T19:21:27.046395Z"
+     "end_time": "2023-02-18T19:34:19.279825Z",
+     "start_time": "2023-02-18T19:34:08.219193Z"
     }
    },
    "outputs": [],
@@ -876,8 +876,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:40.966749Z",
-     "start_time": "2023-02-18T19:21:40.925809Z"
+     "end_time": "2023-02-18T19:34:21.461275Z",
+     "start_time": "2023-02-18T19:34:21.421409Z"
     }
    },
    "outputs": [],
@@ -1006,8 +1006,8 @@
     "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
     "                                                              inplace=False)\n",
     "    if df.shape[0] > 20:\n",
-    "        X, y = df.iloc[:, 1:].to_numpy(copy=False), df.iloc[:, 0].to_numpy(\n",
-    "            copy=False)\n",
+    "        X, y = df.iloc[:, 1:].to_numpy(copy=True), df.iloc[:, 0].to_numpy(\n",
+    "            copy=True)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
     "        X = SplineTransformer(n_knots=2,\n",
     "                              degree=3,\n",
@@ -1114,8 +1114,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:53.163466Z",
-     "start_time": "2023-02-18T19:21:41.924578Z"
+     "end_time": "2023-02-18T19:34:33.804144Z",
+     "start_time": "2023-02-18T19:34:22.331443Z"
     }
    },
    "outputs": [],
@@ -1141,8 +1141,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:55.074337Z",
-     "start_time": "2023-02-18T19:21:54.395250Z"
+     "end_time": "2023-02-18T19:34:35.832638Z",
+     "start_time": "2023-02-18T19:34:35.169273Z"
     }
    },
    "outputs": [
@@ -1203,8 +1203,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_58629/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_58629/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
+      "\u001b[0;32m/tmp/ipykernel_61432/3444889250.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"MLPRegressor\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m ]:\n\u001b[0;32m---> 51\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_61432/3444889250.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
       "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_MLPRegressor.npy'"
      ]
@@ -1352,8 +1352,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:21:59.042030Z",
-     "start_time": "2023-02-18T19:21:58.997655Z"
+     "end_time": "2023-02-18T19:34:39.471974Z",
+     "start_time": "2023-02-18T19:34:39.437071Z"
     }
    },
    "outputs": [],
@@ -1483,8 +1483,8 @@
     "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
     "                                                              inplace=False)\n",
     "    if df.shape[0] > 20:\n",
-    "        X, y = df.iloc[:, 1:].to_numpy(copy=False), df.iloc[:, 0].to_numpy(\n",
-    "            copy=False)\n",
+    "        X, y = df.iloc[:, 1:].to_numpy(copy=True), df.iloc[:, 0].to_numpy(\n",
+    "            copy=True)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
     "        X_train, X_test, y_train, y_test = train_test_split(\n",
     "            X, y, train_size=training_proportion, random_state=seed)\n",
@@ -1586,8 +1586,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:22:11.027095Z",
-     "start_time": "2023-02-18T19:21:59.775038Z"
+     "end_time": "2023-02-18T19:34:52.070949Z",
+     "start_time": "2023-02-18T19:34:40.350890Z"
     }
    },
    "outputs": [],
@@ -1617,8 +1617,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:22:12.280999Z",
-     "start_time": "2023-02-18T19:22:12.244440Z"
+     "end_time": "2023-02-18T19:34:53.963421Z",
+     "start_time": "2023-02-18T19:34:53.904371Z"
     }
    },
    "outputs": [],
@@ -1748,8 +1748,8 @@
     "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
     "                                                              inplace=False)\n",
     "    if df.shape[0] > 20:\n",
-    "        X, y = df.iloc[:, 1:].to_numpy(copy=False), df.iloc[:, 0].to_numpy(\n",
-    "            copy=False)\n",
+    "        X, y = df.iloc[:, 1:].to_numpy(copy=True), df.iloc[:, 0].to_numpy(\n",
+    "            copy=True)\n",
     "        X = StandardScaler(copy=False).fit_transform(X)\n",
     "        X = SplineTransformer(n_knots=2,\n",
     "                              degree=3,\n",
@@ -1856,8 +1856,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-18T19:22:24.676627Z",
-     "start_time": "2023-02-18T19:22:12.965801Z"
+     "end_time": "2023-02-18T19:35:06.161982Z",
+     "start_time": "2023-02-18T19:34:54.643187Z"
     }
    },
    "outputs": [],
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
@@ -1887,21 +1887,7 @@
      "start_time": "2023-02-18T18:49:20.833826Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_LogisticRegressionCV_l1.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_37831/25354492.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;34m\"LogisticRegressionCV_ElasticNet\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"MLPClassifier\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m ]:\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_37831/25354492.py\u001b[0m in \u001b[0;36mplot_results\u001b[0;34m(_plt, fun_name)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplot_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_plt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"./ABIDE_columns.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     ABIDE_age_MI_foo = np.load(\n\u001b[0m\u001b[1;32m      4\u001b[0m         r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(\n\u001b[1;32m      5\u001b[0m             fun_name=fun_name))\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ABIDE_predict_age/ABIDE_age_MI_LogisticRegressionCV_l1.npy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_results(_plt, fun_name):\n",
     "    columns = np.load(r\"./ABIDE_columns.npy\")\n",
