--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "# print(_abide_name)\n",
     "\n",
-    "# we don\"t inlcude age and sex in the screening since we choose to always include them in the model\n",
+    "# we don't inlcude age and sex in the screening since we choose to always include them in the model\n",
     "\"\"\"\n",
     "    if outcome == \"age\":\n",
     "        py_2 = r\"\"\"\n",
@@ -533,12 +533,12 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
-    "        elif fun in [RidgeCV]:  # RidgeCV doesn\"t have seed setting and n_jobs\n",
+    "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
     "        elif fun in [LarsCV, LassoLarsCV\n",
-    "                     ]:  # LarsCV doesn\"t have seed setting but have n_jobs\n",
+    "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
     "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
@@ -802,12 +802,12 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
-    "        elif fun in [RidgeCV]:  # RidgeCV doesn\"t have seed setting and n_jobs\n",
+    "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
     "        elif fun in [LarsCV, LassoLarsCV\n",
-    "                     ]:  # LarsCV doesn\"t have seed setting but have n_jobs\n",
+    "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
     "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
@@ -1241,12 +1241,12 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
-    "        elif fun in [RidgeCV]:  # RidgeCV doesn\"t have seed setting and n_jobs\n",
+    "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
     "        elif fun in [LarsCV, LassoLarsCV\n",
-    "                     ]:  # LarsCV doesn\"t have seed setting but have n_jobs\n",
+    "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
     "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
@@ -1516,12 +1516,12 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
-    "        elif fun in [RidgeCV]:  # RidgeCV doesn\"t have seed setting and n_jobs\n",
+    "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
     "        elif fun in [LarsCV, LassoLarsCV\n",
-    "                     ]:  # LarsCV doesn\"t have seed setting but have n_jobs\n",
+    "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
     "            fit = fun(cv=5, n_jobs=10).fit(X_train, y_train)\n",
     "            y_pred = fit.predict(X_test)\n",
     "            out = r2_score(y_test, y_pred)\n",
